--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'org.asciidoctor.convert' version '1.5.8'
 	id 'java'
+	id 'com.epages.restdocs-api-spec' version '0.11.3'
 }
 
 group = 'com.spring'
@@ -32,7 +33,9 @@ dependencies {
 	runtimeOnly 'mysql:mysql-connector-java'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	asciidoctor 'org.springframework.restdocs:spring-restdocs-asciidoctor'
 	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
+	testCompile('com.epages:restdocs-api-spec-mockmvc:0.11.3')
 }
 
 test {
@@ -44,3 +47,25 @@ asciidoctor {
 	inputs.dir snippetsDir
 	dependsOn test
 }
+
+bootJar {
+	dependsOn asciidoctor
+
+	copy {
+		from "build/asciidoc/html5"
+		into "src/main/resources/static/docs/"
+	}
+}
+
+	openapi3 {
+		server = "http://localhost:8080"
+		title = 'My API'
+		description = 'My API Description'
+		version = '0.1.0'
+		format = 'yaml'
+
+		copy {
+			from "build/api-spec"
+			into "src/main/resources/static/docs/"
+		}
+	}
